Other time_t->QDateTime porting issues

This ports back the other two places the cache times were resetted in kde4, in cacheParseResponseHeader and resetSessionSettings

REVIEW:118479
BUG:334767